Add new images to the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -276,6 +276,9 @@ body::-webkit-scrollbar {
       "IMG_20250504_200520.jpg",
       "IMG_20250613_120013.jpg",
       "IMG_20250613_120114.jpg",
+      "IMG-20250714-WA0011.jpg",
+      "IMG-20250714-WA0013.jpg",
+      "IMG-20250714-WA0015.jpg",
       "Snapchat-1161580771.jpg",
       "Snapchat-37745447.jpg",
       "Snapchat-536139701.jpg"
